fixed sidebar collapse issue at 580px

--- a/technical-documentation-page/css/styles.css
+++ b/technical-documentation-page/css/styles.css
@@ -17,7 +17,6 @@ body {
 #sidebar {
   border-right: 3px solid black;
   height: 100%;
-  min-height: 100%;
   overflow-y: scroll;
 }
 /* Sidebar List Styling */
@@ -59,6 +58,7 @@ body {
     grid-template-rows: 0.31fr 0.74fr;
   }
   #sidebar {
+    height: 200px;
     border-right: none;
   }
   #content {
